--- a/site/NSI/Terminale/C04/projet_Web_BDD/index.html
+++ b/site/NSI/Terminale/C04/projet_Web_BDD/index.html
@@ -4982,7 +4982,7 @@ Toutes les pages de notre projet héritant du template <code>base.html</code>, l
 {% endblock %}
 </code></pre></div>
 <h3 id="partie-facultative-les-routes-a-parametres">Partie facultative : Les routes à paramètres</h3>
-<p>Il est tout à fait possible de passer des paramètres aux fonctions établissant les différentes routes. Comme il est très tard, et que je commence à fatiguer, vous pouvez voir un exemple d'utilisation pour les personnes disposant de droits d'administration, en téléchargeant l'archive ZIP suivante : <a href="../Blog/Blog.zip" target="_blank">Blog.zip</a></p>
+<p>Il est tout à fait possible de passer des paramètres aux fonctions établissant les différentes routes. Comme il est très tard, et que je commence à fatiguer, vous pouvez voir un exemple d'utilisation pour les personnes disposant de droits d'administration, en téléchargeant l'archive ZIP suivante : <a href="../Blog/Blog.zip" target="_blank">Blog.zip</a>.</p>
 <h2 id="votre-projet-bdd">Votre projet BDD</h2>
 <p>Vous devez construire une application Flask utilisant une base de données, sur le thème de votre choix, et dans laquelle il existe plusieurs pages :</p>
 <ul>
