--- a/site/NSI/Terminale/C05/ABR/index.html
+++ b/site/NSI/Terminale/C05/ABR/index.html
@@ -4440,7 +4440,7 @@
 <li>La sortie de droite mène <strong>toujours</strong> soit à une salle dont les trois lettres sont situées après dans l'ordre alphabétique, soit nulle part.</li>
 </ul>
 <p>Une représentation de cette bibliothèque peut être donnée sous la forme d'un arbre binaire tel que le suivant :</p>
-<p><img alt="P2_ABR_1.png" src="../P2_ABR_1.png" style="Witt:50%; margin:auto;display:block;background-color: #d2dce0;"></p>
+<p><img alt="P2_ABR_1.png" src="../P2_ABR_1.png" style="Width:50%; margin:auto;display:block;background-color: #d2dce0;"></p>
 <div class="admonition question">
 <p class="admonition-title">Question</p>
 <div class="tabbed-set tabbed-alternate" data-tabs="1:2"><input checked id="__tabbed_1_1" name="__tabbed_1" type="radio"><input id="__tabbed_1_2" name="__tabbed_1" type="radio"><div class="tabbed-labels"><label for="__tabbed_1_1">Énoncé</label><label for="__tabbed_1_2">Réponses</label></div>
