MAJ codage caractère, corrections

--- a/site/NSI/Premiere/C02/CodageCaractere/index.html
+++ b/site/NSI/Premiere/C02/CodageCaractere/index.html
@@ -4368,8 +4368,8 @@
 <p>À partir des années 1960, les ordinateurs commencent à être équipés d'un clavier et d'un rouleau pour imprimer les sorties. Il fut donc nécessaire de décider comment manipuler les caractères alphanumériques.</p>
 <p>La décision fut prise de représenter <em>les caractères de l'alphabet anglais</em> sur un octet<sup id="fnref:sept"><a class="footnote-ref" href="#fn:sept">1</a></sup> de la manière suivante :</p>
 <ul>
-<li>les 7 octets de poids faible (les plus à droite) serviront à associer une valeur numérique à chaque caractère ;</li>
-<li>l'octet de poids fort (celui le plus à gauche) sera le <strong>bit de parité</strong> - une clé de contrôle.</li>
+<li>les 7 bits de poids faible (les plus à droite) serviront à associer une valeur numérique à chaque caractère ;</li>
+<li>le bit de poids fort (celui le plus à gauche) sera le <strong>bit de parité</strong> - une clé de contrôle.</li>
 </ul>
 <div class="admonition info">
 <p class="admonition-title">Bit de parité</p>
