MAJ Alignement Séquences

--- a/site/NSI/Terminale/C08/alignSeq/index.html
+++ b/site/NSI/Terminale/C08/alignSeq/index.html
@@ -4475,7 +4475,7 @@
 
 <div><h1 id="alignement-de-sequences">Alignement de séquences</h1>
 <h2 id="presentation-du-sujet">Présentation du sujet</h2>
-<p>On dispose de deux chaînes de caractères : <span class="arithmatex">\(A\)</span>, qui vaut <code>INFORMATIQUE</code>, et <span class="arithmatex">\(B\)</span>, qui vaut <code>NUMERIQUE</code>. On aimerait mettre ces deux chaines de caractères en correspondance de la manière suivante :</p>
+<p>On dispose de deux chaines de caractères : <span class="arithmatex">\(A\)</span>, qui vaut <code>INFORMATIQUE</code>, et <span class="arithmatex">\(B\)</span>, qui vaut <code>NUMERIQUE</code>. On aimerait mettre ces deux chaines de caractères en correspondance de la manière suivante :</p>
 <ul>
 <li>On place les 2 chaines l'une en dessous de l'autre ;</li>
 <li>Si les premiers caractères des deux chaines coïncident, alors on passe aux caractères suivants ;</li>
@@ -4483,8 +4483,8 @@
 </ul>
 <p>Voici un exemple d'alignement optimal :</p>
 <p><img alt="exempleAlignement.gif" src="../exempleAlignement.gif" style="width:40%; margin:auto;display:block;background-color: #d2dce0;"></p>
-<p>Dans cette situation on a besoin de 9 tirets, pas moins.</p>
-<p>L'objectif est d'aligner le maximum de lettres (donc de mettre le moins de <code>-</code> possible). Ce n'est pas un problème simple, surtout quand les chaines sont longues, comme pour les séquences d'ADN par exemple :</p>
+<p>Dans cette situation on a besoin de 9 tirets pour obtenir l'alignement optimal, c'est-à-dire utilisant le moins de tirets.</p>
+<p>L'objectif est d'aligner le maximum de lettres (donc de mettre le moins de tirets possible). Ce n'est pas un problème simple, surtout quand les chaines sont longues, comme pour les séquences d'ADN par exemple :</p>
 <p><img alt="sequenceADN.png" src="../sequenceADN.png" style="width:80%; margin:auto;display:block;background-color: #d2dce0;"></p>
 <h2 id="resolution-par-une-methode-recursive">Résolution par une méthode récursive</h2>
 <h3 id="principes">Principes</h3>
