--- a/site/NSI/Terminale/C07/Routage/index.html
+++ b/site/NSI/Terminale/C07/Routage/index.html
@@ -4522,7 +4522,7 @@ Cette possibilité existe aussi sous Windows mais :</p>
 <p>On constate ici qu'on a bien un passage par 8 machines (7 routeurs plus mon propre PC) :</p>
 <ul>
 <li>le premier routeur d'ip <code>192.168.1.254</code> (adresse classique des passerelles chez Free, c'est-à-dire de ma box);</li>
-<li>le second <code>194.149.164.68</code>, qui correspond à un routeur Free  (on peut le vérifier avec l'outil <a href="https://www.crawl-tools.com/fr/whois-client/" target="target">who is</a>;</li>
+<li>le second <code>194.149.164.68</code>, qui correspond à un routeur Free  (on peut le vérifier avec l'outil <a href="https://www.crawl-tools.com/fr/whois-client/" target="target">who is</a>);</li>
 <li>etc... jusqu'à atteindre le DNS Google d'IP <code>8.8.8.8</code></li>
 </ul>
 <div class="admonition question">
